# otus-2

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
include/: ip_base.h
source/: ip_base.cpp  main.cpp
test/source/: test_ip_base.cpp
